# haskell-nix-skeleton-1

./: LICENSE  README.md  default.nix  nixos-18-03.json  nixos-18-09.json  pkgs-from-json.nix  project1.cabal  release1.nix  release2.nix  release3.nix  release4.nix  release5.nix  release6.nix  release7.nix  shell.nix  shell2.nix  toggle-hoogle.nix
